--- a/index.html
+++ b/index.html
@@ -3,71 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Doc Online – Đọc & Học Thông Minh</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<header class="topbar">
-    <div class="topbar-inner">
-        <div class="logo">Doc<span>Online</span></div>
-        <nav class="top-nav">
-            <a class="active" href="index.html">Trang chủ</a>
-            <a href="pages/features.html">Tính năng</a>
-            <a href="pages/guide.html">Hướng dẫn</a>
-            <a href="pages/pricing.html">Gói dịch vụ</a>
-            <a href="pages/contact.html">Liên hệ</a>
+<header class="navbar">
+    <div class="nav-container">
+        <a class="logo" href="/index.html">DocOnline</a>
+        <nav class="nav-menu">
+            <a class="active" href="/index.html">Trang chủ</a>
+            <a href="/pages/features.html">Tính năng</a>
+            <a href="/pages/guide.html">Hướng dẫn</a>
+            <a href="/pages/pricing.html">Giá</a>
+            <a href="/pages/contact.html">Liên hệ</a>
         </nav>
     </div>
 </header>
 
-<section class="hero">
-    <div class="container hero-inner">
-        <div class="hero-text">
-            <h1>Đọc & học<br><span>đơn giản – hiệu quả</span></h1>
-            <p>Nền tảng đọc tài liệu, học tập và trắc nghiệm online.</p>
-
-            <div class="hero-actions">
-                <a class="btn primary" href="pages/features.html">Xem tính năng</a>
-                <a class="btn ghost" href="pages/guide.html">Hướng dẫn</a>
-            </div>
-        </div>
-
-        <div class="hero-image">
-            <img src="https://dummyimage.com/500x360/e5e7eb/111827&text=Doc+Online">
+<main class="container hero">
+    <div>
+        <h1>Đọc & học<br><span>thông minh hơn</span></h1>
+        <p>
+            Nền tảng đọc tài liệu, học tập và trắc nghiệm online,
+            tối ưu cho học sinh, giáo viên và người tự học.
+        </p>
+        <a class="btn primary" href="/pages/features.html">Khám phá tính năng</a>
+        <a class="btn outline" href="/pages/guide.html">Cách sử dụng</a>
+    </div>
+    <div>
+        <div class="card">
+            <h3>📘 Một nền tảng – nhiều mục đích</h3>
+            <p>Đọc tài liệu, học tập, ôn luyện – tất cả trong một.</p>
         </div>
     </div>
-</section>
-
-<section class="section">
-    <div class="container">
-        <h2 class="section-title">Bạn có thể làm gì?</h2>
-
-        <div class="feature-grid">
-            <div class="feature-card">
-                <div class="icon">📄</div>
-                <h3>Đọc tài liệu</h3>
-                <p>PDF, văn bản, tài liệu học tập online.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="icon">🧠</div>
-                <h3>Học & trắc nghiệm</h3>
-                <p>Luyện tập, ghi nhớ kiến thức hiệu quả.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="icon">☁️</div>
-                <h3>Đồng bộ</h3>
-                <p>Dữ liệu luôn được lưu an toàn.</p>
-            </div>
-        </div>
-    </div>
-</section>
+</main>
 
 <footer class="footer">
-    © 2026 Doc Online
+    © 2026 Doc Online – Made in Vietnam
 </footer>
 
 </body>
