--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <title>Gói dịch vụ – Doc Online</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+<meta charset="UTF-8">
+<title>Tính năng – Doc Online</title>
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-<header class="topbar">
-    <div class="topbar-inner">
-        <div class="logo">Doc<span>Online</span></div>
-        <nav class="top-nav">
-            <a href="../index.html">Trang chủ</a>
-            <a href="features.html">Tính năng</a>
-            <a href="guide.html">Hướng dẫn</a>
-            <a class="active" href="pricing.html">Gói dịch vụ</a>
-            <a href="contact.html">Liên hệ</a>
-        </nav>
-    </div>
+<header class="navbar">
+<div class="nav-container">
+<a class="logo" href="/index.html">DocOnline</a>
+<nav class="nav-menu">
+<a href="/index.html">Trang chủ</a>
+<a class="active" href="/pages/features.html">Tính năng</a>
+<a href="/pages/guide.html">Hướng dẫn</a>
+<a href="/pages/pricing.html">Giá</a>
+<a href="/pages/contact.html">Liên hệ</a>
+</nav>
+</div>
 </header>
 
-<section class="page-header">
-    <h1>Gói dịch vụ</h1>
-</section>
+<main class="container">
+<h2 class="section-title">Tính năng nổi bật</h2>
+<div class="card-grid">
+<div class="card">📄 Đọc tài liệu online</div>
+<div class="card">🧠 Học & trắc nghiệm</div>
+<div class="card">☁️ Đồng bộ dữ liệu</div>
+</div>
+</main>
 
-<section class="section container">
-    <p>Thông tin các gói sử dụng.</p>
-</section>
-
-<footer class="footer">© 2026 Doc Online</footer>
+<footer class="footer">© Doc Online</footer>
 </body>
 </html>
