--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <title>Doc Online – Đọc & Học Thông Minh</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-</head>
 <body>
 
 <header class="navbar">
@@ -22,27 +13,20 @@
     </div>
 </header>
 
-<main class="container hero">
-    <div>
-        <h1>Đọc & học<br><span>thông minh hơn</span></h1>
-        <p>
-            Nền tảng đọc tài liệu, học tập và trắc nghiệm online,
-            tối ưu cho học sinh, giáo viên và người tự học.
-        </p>
-        <a class="btn primary" href="/pages/features.html">Khám phá tính năng</a>
-        <a class="btn outline" href="/pages/guide.html">Cách sử dụng</a>
-    </div>
-    <div>
+<main class="page">
+    <div class="container hero">
+        <div>
+            <h1>Đọc & học<br><span>thông minh hơn</span></h1>
+            <p>Nền tảng đọc tài liệu và học tập online hiện đại.</p>
+            <a class="btn primary" href="/pages/features.html">Xem tính năng</a>
+            <a class="btn outline" href="/pages/guide.html">Hướng dẫn</a>
+        </div>
         <div class="card">
-            <h3>📘 Một nền tảng – nhiều mục đích</h3>
-            <p>Đọc tài liệu, học tập, ôn luyện – tất cả trong một.</p>
+            📘 Một nền tảng – nhiều mục đích
         </div>
     </div>
 </main>
 
-<footer class="footer">
-    © 2026 Doc Online – Made in Vietnam
-</footer>
+<footer class="footer">© 2026 Doc Online</footer>
 
 </body>
-</html>
