--- a/pages/guide.html
+++ b/pages/guide.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Tính năng – Doc Online</title>
+<title>Hướng dẫn sử dụng – Doc Online</title>
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -12,23 +12,37 @@
 <a class="logo" href="/index.html">DocOnline</a>
 <nav class="nav-menu">
 <a href="/index.html">Trang chủ</a>
-<a class="active" href="/pages/features.html">Tính năng</a>
-<a href="/pages/guide.html">Hướng dẫn</a>
+<a href="/pages/features.html">Tính năng</a>
+<a class="active" href="/pages/guide.html">Hướng dẫn</a>
 <a href="/pages/pricing.html">Giá</a>
 <a href="/pages/contact.html">Liên hệ</a>
 </nav>
 </div>
 </header>
 
-<main class="container">
-<h2 class="section-title">Tính năng nổi bật</h2>
+<main class="page">
+<section class="page-inner">
+
+<h1>Hướng dẫn sử dụng</h1>
+<p>
+Doc Online giúp bạn đọc tài liệu và học tập trực tuyến
+một cách đơn giản, không cần cài đặt.
+</p>
+
+<h2>Các bước sử dụng Doc Online</h2>
+
 <div class="card-grid">
-<div class="card">📄 Đọc tài liệu online</div>
-<div class="card">🧠 Học & trắc nghiệm</div>
-<div class="card">☁️ Đồng bộ dữ liệu</div>
+<div class="card">1️⃣ Truy cập website Doc Online</div>
+<div class="card">2️⃣ Chọn nội dung muốn đọc hoặc học</div>
+<div class="card">3️⃣ Lưu tiến trình và tiếp tục bất cứ lúc nào</div>
 </div>
+
+</section>
 </main>
 
-<footer class="footer">© Doc Online</footer>
+<footer class="footer">
+© 2026 Doc Online
+</footer>
+
 </body>
 </html>
