--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+<meta charset="UTF-8">
+<title>Doc Online – Đọc & Học Thông Minh</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+</head>
 <body>
 
 <header class="navbar">
-    <div class="nav-container">
-        <a class="logo" href="/index.html">DocOnline</a>
-        <nav class="nav-menu">
-            <a class="active" href="/index.html">Trang chủ</a>
-            <a href="/pages/features.html">Tính năng</a>
-            <a href="/pages/guide.html">Hướng dẫn</a>
-            <a href="/pages/pricing.html">Giá</a>
-            <a href="/pages/contact.html">Liên hệ</a>
-        </nav>
-    </div>
+<div class="nav-inner">
+<a class="logo" href="/index.html">❄ DocOnline</a>
+<nav class="nav-menu">
+<a class="active" href="/index.html">Trang chủ</a>
+<a href="/pages/features.html">Tính năng</a>
+<a href="/pages/guide.html">Hướng dẫn</a>
+<a href="/pages/pricing.html">Giá</a>
+<a href="/pages/contact.html">Liên hệ</a>
+</nav>
+</div>
 </header>
 
 <main class="page">
-    <div class="container hero">
-        <div>
-            <h1>Đọc & học<br><span>thông minh hơn</span></h1>
-            <p>Nền tảng đọc tài liệu và học tập online hiện đại.</p>
-            <a class="btn primary" href="/pages/features.html">Xem tính năng</a>
-            <a class="btn outline" href="/pages/guide.html">Hướng dẫn</a>
-        </div>
-        <div class="card">
-            📘 Một nền tảng – nhiều mục đích
-        </div>
-    </div>
+<section class="page-inner">
+
+<h1>Đọc & học thông minh hơn</h1>
+<p>
+Doc Online là nền tảng đọc tài liệu, học tập và trắc nghiệm
+online hiện đại – không cần cài đặt.
+</p>
+
+<div class="card-grid">
+<div class="card">📘 Đọc tài liệu trực tuyến</div>
+<div class="card">🧠 Học & trắc nghiệm</div>
+<div class="card">☁️ Đồng bộ dữ liệu</div>
+</div>
+
+</section>
 </main>
 
-<footer class="footer">© 2026 Doc Online</footer>
+<footer class="footer">
+© 2026 Doc Online
+</footer>
 
 </body>
+</html>
