--- a/pages/features.html
+++ b/pages/features.html
@@ -8,8 +8,8 @@
 <body>
 
 <header class="navbar">
-<div class="nav-container">
-<a class="logo" href="/index.html">DocOnline</a>
+<div class="nav-inner">
+<a class="logo" href="/index.html">❄ DocOnline</a>
 <nav class="nav-menu">
 <a href="/index.html">Trang chủ</a>
 <a class="active" href="/pages/features.html">Tính năng</a>
@@ -20,15 +20,22 @@
 </div>
 </header>
 
-<main class="container">
-<h2 class="section-title">Tính năng nổi bật</h2>
+<main class="page">
+<section class="page-inner">
+
+<h1>Tính năng</h1>
+<p>Các tính năng chính của Doc Online.</p>
+
 <div class="card-grid">
-<div class="card">📄 Đọc tài liệu online</div>
-<div class="card">🧠 Học & trắc nghiệm</div>
-<div class="card">☁️ Đồng bộ dữ liệu</div>
+<div class="card">📄 Đọc PDF & văn bản</div>
+<div class="card">🧠 Trắc nghiệm thông minh</div>
+<div class="card">☁️ Lưu tiến trình học</div>
 </div>
+
+</section>
 </main>
 
 <footer class="footer">© Doc Online</footer>
+
 </body>
 </html>
