--- a/pages/guide.html
+++ b/pages/guide.html
@@ -2,14 +2,14 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Hướng dẫn sử dụng – Doc Online</title>
+<title>Hướng dẫn – Doc Online</title>
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
 <header class="navbar">
-<div class="nav-container">
-<a class="logo" href="/index.html">DocOnline</a>
+<div class="nav-inner">
+<a class="logo" href="/index.html">❄ DocOnline</a>
 <nav class="nav-menu">
 <a href="/index.html">Trang chủ</a>
 <a href="/pages/features.html">Tính năng</a>
@@ -24,25 +24,18 @@
 <section class="page-inner">
 
 <h1>Hướng dẫn sử dụng</h1>
-<p>
-Doc Online giúp bạn đọc tài liệu và học tập trực tuyến
-một cách đơn giản, không cần cài đặt.
-</p>
-
-<h2>Các bước sử dụng Doc Online</h2>
+<p>Chỉ cần 3 bước để bắt đầu với Doc Online.</p>
 
 <div class="card-grid">
-<div class="card">1️⃣ Truy cập website Doc Online</div>
-<div class="card">2️⃣ Chọn nội dung muốn đọc hoặc học</div>
-<div class="card">3️⃣ Lưu tiến trình và tiếp tục bất cứ lúc nào</div>
+<div class="card">1️⃣ Truy cập website</div>
+<div class="card">2️⃣ Chọn nội dung</div>
+<div class="card">3️⃣ Học & lưu tiến trình</div>
 </div>
 
 </section>
 </main>
 
-<footer class="footer">
-© 2026 Doc Online
-</footer>
+<footer class="footer">© Doc Online</footer>
 
 </body>
 </html>
