--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,33 +2,40 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Tính năng – Doc Online</title>
+<title>Hướng dẫn – Doc Online</title>
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
 <header class="navbar">
-<div class="nav-container">
-<a class="logo" href="/index.html">DocOnline</a>
+<div class="nav-inner">
+<a class="logo" href="/index.html">❄ DocOnline</a>
 <nav class="nav-menu">
 <a href="/index.html">Trang chủ</a>
-<a class="active" href="/pages/features.html">Tính năng</a>
-<a href="/pages/guide.html">Hướng dẫn</a>
+<a href="/pages/features.html">Tính năng</a>
+<a class="active" href="/pages/guide.html">Hướng dẫn</a>
 <a href="/pages/pricing.html">Giá</a>
 <a href="/pages/contact.html">Liên hệ</a>
 </nav>
 </div>
 </header>
 
-<main class="container">
-<h2 class="section-title">Tính năng nổi bật</h2>
+<main class="page">
+<section class="page-inner">
+
+<h1>Hướng dẫn sử dụng</h1>
+<p>Chỉ cần 3 bước để bắt đầu với Doc Online.</p>
+
 <div class="card-grid">
-<div class="card">📄 Đọc tài liệu online</div>
-<div class="card">🧠 Học & trắc nghiệm</div>
-<div class="card">☁️ Đồng bộ dữ liệu</div>
+<div class="card">1️⃣ Truy cập website</div>
+<div class="card">2️⃣ Chọn nội dung</div>
+<div class="card">3️⃣ Học & lưu tiến trình</div>
 </div>
+
+</section>
 </main>
 
 <footer class="footer">© Doc Online</footer>
+
 </body>
 </html>
