--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Doc Online – Đọc & Học Thông Minh</title>
+<title>Đọc Online – Đọc & Học Thông Minh</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 
 <header class="navbar">
 <div class="nav-inner">
-<a class="logo" href="/index.html">❄ DocOnline</a>
+<a class="logo" href="/index.html">❄ Đọc Online</a>
 <nav class="nav-menu">
 <a class="active" href="/index.html">Trang chủ</a>
 <a href="/pages/features.html">Tính năng</a>
@@ -32,9 +32,10 @@ online hiện đại – không cần cài đặt.
 </p>
 
 <div class="card-grid">
-<div class="card">📘 Đọc tài liệu trực tuyến</div>
-<div class="card">🧠 Học & trắc nghiệm</div>
-<div class="card">☁️ Đồng bộ dữ liệu</div>
+<div class="card">📰 Đọc báo RSS không quảng cáo</div>
+<div class="card">📖 Đọc truyện online</div>
+<div class="card">📗 Kho truyện tranh - truyện chữ chia sẻ</div>
+<div class="card">☁️ Truy cập google drive</div>
 </div>
 
 </section>
