--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ online hiện đại – không cần cài đặt.
 </p>
 
 <div class="card-grid">
-<div class="card">📰 Đọc báo RSS không quảng cáo</div>
+<div class="card">📰 Đọc báo RSS</div>
 <div class="card">📖 Đọc truyện online</div>
-<div class="card">📗 Kho truyện tranh - truyện chữ chia sẻ</div>
+<div class="card">📗 Kho truyện chia sẻ</div>
 <div class="card">☁️ Truy cập google drive</div>
 </div>
 
