--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ online hiện đại – không cần cài đặt.
 <div class="card-grid">
 <div class="card">📰 Đọc báo RSS</div>
 <div class="card">📖 Đọc truyện online</div>
-<div class="card">📗 Kho truyện chia sẻ</div>
+<div class="card">📚 Kho truyện chia sẻ</div>
 <div class="card">☁️ Truy cập google drive</div>
 </div>
 
