--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Đọc Online – Đọc & Học Thông Minh</title>
+<title>Đọc Online </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -25,10 +25,9 @@
 <main class="page">
 <section class="page-inner">
 
-<h1>Đọc & học thông minh hơn</h1>
+<h1>Truy cập nhanh - tiện lợi - tập trung hơp</h1>
 <p>
-Doc Online là nền tảng đọc tài liệu, học tập và trắc nghiệm
-online hiện đại – không cần cài đặt.
+Đọc online là ứng dụng plugin koreader hỗ trợ đọc tốt hơn cho các máy đọc sách e-ink như android/kobo/kindle/pocketbook...
 </p>
 
 <div class="card-grid">
