--- a/index.html
+++ b/index.html
@@ -25,17 +25,41 @@
 <main class="page">
 <section class="page-inner">
 
-<h1>Truy cập nhanh - tiện lợi - tập trung hơp</h1>
+<h1>Truy cập nhanh - tiện lợi - tập trung hơn</h1>
 <p>
-Đọc online là ứng dụng plugin koreader hỗ trợ đọc tốt hơn cho các máy đọc sách e-ink như android/kobo/kindle/pocketbook...
+Đọc online là ứng dụng plugin koreader hỗ trợ đọc tốt hơn cho các máy đọc sách e-ink như android - kobo - kindle - pocketbook...
 </p>
 
 <div class="card-grid">
-<div class="card">📰 Đọc báo RSS</div>
-<div class="card">📖 Đọc truyện online</div>
-<div class="card">📚 Kho truyện chia sẻ</div>
-<div class="card">☁️ Truy cập google drive</div>
+  <div class="card">
+    <div class="card-title">📰 Đọc báo RSS</div>
+    <div class="card-desc">
+      Tổng hợp tin tức từ nhiều nguồn RSS, đọc gọn nhẹ, không quảng cáo.
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-title">📖 Đọc truyện online</div>
+    <div class="card-desc">
+      Đọc truyện chữ trực tuyến, tải nhanh, hiển thị tối ưu cho e-ink.
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-title">📚 Kho truyện chia sẻ</div>
+    <div class="card-desc">
+      Thư viện truyện do cộng đồng chia sẻ, cập nhật liên tục.
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-title">☁️ Truy cập Google Drive</div>
+    <div class="card-desc">
+      Đọc trực tiếp file EPUB, PDF, TXT từ Google Drive của bạn.
+    </div>
+  </div>
 </div>
+
 
 </section>
 </main>
