--- a/index.html
+++ b/index.html
@@ -30,35 +30,50 @@
 Đọc online là ứng dụng plugin koreader hỗ trợ đọc tốt hơn cho các máy đọc sách e-ink như android - kobo - kindle - pocketbook...
 </p>
 
-<div class="card-grid">
-  <div class="card">
-    <div class="card-title">📰 Đọc báo RSS</div>
-    <div class="card-desc">
-      Tổng hợp tin tức từ nhiều nguồn RSS, đọc gọn nhẹ, không quảng cáo.
-    </div>
+<section class="features">
+
+  <div class="feature-box">
+    <h2>📰 Đọc báo RSS</h2>
+    <ul>
+      <li>🖼️ Hiển thị danh sách bài viết dạng thumbnail</li>
+      <li>🏠 Trang chủ tổng hợp nhiều đầu báo RSS</li>
+      <li>⭐ Quản lý danh mục yêu thích</li>
+      <li>⚡ Cập nhật tin mới nhất</li>
+      <li>🔍 Tìm kiếm nội dung bài viết</li>
+    </ul>
   </div>
 
-  <div class="card">
-    <div class="card-title">📖 Đọc truyện online</div>
-    <div class="card-desc">
-      Đọc truyện chữ trực tuyến, tải nhanh, hiển thị tối ưu cho e-ink.
-    </div>
+  <div class="feature-box">
+    <h2>📖 Đọc truyện online</h2>
+    <ul>
+      <li>🆕 Cập nhật truyện mới liên tục</li>
+      <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp, ngôn tình…</li>
+      <li>🔄 Đồng bộ chương đang đọc, đọc tiếp trên mọi thiết bị</li>
+      <li>🌐 Tìm kiếm truyện từ nhiều nguồn</li>
+      <li>⬇️ Tải truyện về đọc offline</li>
+    </ul>
   </div>
 
-  <div class="card">
-    <div class="card-title">📚 Kho truyện chia sẻ</div>
-    <div class="card-desc">
-      Thư viện truyện do cộng đồng chia sẻ, cập nhật liên tục.
-    </div>
+  <div class="feature-box">
+    <h2>📚 Kho truyện chia sẻ</h2>
+    <ul>
+      <li>🤝 Tải truyện & sách do cộng đồng chia sẻ công khai</li>
+      <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ, thể loại</li>
+      <li>📈 Kho nội dung được cập nhật liên tục</li>
+    </ul>
   </div>
 
-  <div class="card">
-    <div class="card-title">☁️ Truy cập Google Drive</div>
-    <div class="card-desc">
-      Đọc trực tiếp file EPUB, PDF, TXT từ Google Drive của bạn.
-    </div>
+  <div class="feature-box">
+    <h2>☁️ Truy cập Google Drive</h2>
+    <ul>
+      <li>🔐 Đăng nhập Google Drive cá nhân an toàn</li>
+      <li>📁 Truy cập “Drive của tôi” & “Được chia sẻ với tôi”</li>
+      <li>📥 Tải sách – truyện về máy để đọc offline</li>
+    </ul>
   </div>
-</div>
+
+</section>
+
 
 
 </section>
