--- a/index.html
+++ b/index.html
@@ -32,47 +32,55 @@
 
 <section class="features">
 
-  <div class="feature-box">
-    <h2>📰 Đọc báo RSS</h2>
+  
+<div class="card-grid">
+
+  <div class="card">
+    <img src="/images/rss.png" alt="Đọc báo RSS" class="card-img">
+    <h3>📰 Đọc báo RSS</h3>
     <ul>
-      <li>🖼️ Hiển thị danh sách bài viết dạng thumbnail</li>
+      <li>🖼️ Danh sách bài viết dạng thumbnail</li>
       <li>🏠 Trang chủ tổng hợp nhiều đầu báo RSS</li>
       <li>⭐ Quản lý danh mục yêu thích</li>
-      <li>⚡ Cập nhật tin mới nhất</li>
+      <li>⚡ Tin mới nhất</li>
       <li>🔍 Tìm kiếm nội dung bài viết</li>
     </ul>
   </div>
 
-  <div class="feature-box">
-    <h2>📖 Đọc truyện online</h2>
+  <div class="card">
+    <img src="/images/novel.png" alt="Đọc truyện online" class="card-img">
+    <h3>📖 Đọc truyện online</h3>
     <ul>
       <li>🆕 Cập nhật truyện mới liên tục</li>
-      <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp, ngôn tình…</li>
-      <li>🔄 Đồng bộ chương đang đọc, đọc tiếp trên mọi thiết bị</li>
+      <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp…</li>
+      <li>🔄 Đồng bộ chương đang đọc trên nhiều thiết bị</li>
       <li>🌐 Tìm kiếm truyện từ nhiều nguồn</li>
       <li>⬇️ Tải truyện về đọc offline</li>
     </ul>
   </div>
 
-  <div class="feature-box">
-    <h2>📚 Kho truyện chia sẻ</h2>
+  <div class="card">
+    <img src="/images/library.png" alt="Kho truyện chia sẻ" class="card-img">
+    <h3>📚 Kho truyện chia sẻ</h3>
     <ul>
-      <li>🤝 Tải truyện & sách do cộng đồng chia sẻ công khai</li>
-      <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ, thể loại</li>
-      <li>📈 Kho nội dung được cập nhật liên tục</li>
+      <li>🤝 Tải truyện & sách do cộng đồng chia sẻ</li>
+      <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ</li>
+      <li>📈 Nội dung được cập nhật thường xuyên</li>
     </ul>
   </div>
 
-  <div class="feature-box">
-    <h2>☁️ Truy cập Google Drive</h2>
+  <div class="card">
+    <img src="/images/drive.png" alt="Google Drive" class="card-img">
+    <h3>☁️ Truy cập Google Drive</h3>
     <ul>
-      <li>🔐 Đăng nhập Google Drive cá nhân an toàn</li>
-      <li>📁 Truy cập “Drive của tôi” & “Được chia sẻ với tôi”</li>
-      <li>📥 Tải sách – truyện về máy để đọc offline</li>
+      <li>🔐 Đăng nhập Google Drive cá nhân</li>
+      <li>📁 Xem “Drive của tôi” & “Được chia sẻ với tôi”</li>
+      <li>📥 Tải sách – truyện về máy đọc offline</li>
     </ul>
   </div>
 
-</section>
+</div>
+
 
 
 
