--- a/index.html
+++ b/index.html
@@ -33,53 +33,70 @@
 <section class="features">
 
   
-<div class="card-grid">
+<div class="feature-list">
 
-  <div class="card">
-    <img src="/images/rss.png" alt="Đọc báo RSS" class="card-img">
-    <h3>📰 Đọc báo RSS</h3>
-    <ul>
-      <li>🖼️ Danh sách bài viết dạng thumbnail</li>
-      <li>🏠 Trang chủ tổng hợp nhiều đầu báo RSS</li>
-      <li>⭐ Quản lý danh mục yêu thích</li>
-      <li>⚡ Tin mới nhất</li>
-      <li>🔍 Tìm kiếm nội dung bài viết</li>
-    </ul>
+  <div class="feature-card">
+    <div class="feature-content">
+      <h3>📰 Đọc báo RSS</h3>
+      <ul>
+        <li>🖼️ Danh sách bài viết dạng thumbnail</li>
+        <li>🏠 Trang chủ tổng hợp nhiều đầu báo RSS</li>
+        <li>⭐ Quản lý danh mục yêu thích</li>
+        <li>⚡ Tin mới nhất</li>
+        <li>🔍 Tìm kiếm nội dung bài viết</li>
+      </ul>
+    </div>
+    <div class="feature-image">
+      <img src="/images/rss-vertical.png" alt="Đọc báo RSS">
+    </div>
   </div>
 
-  <div class="card">
-    <img src="/images/novel.png" alt="Đọc truyện online" class="card-img">
-    <h3>📖 Đọc truyện online</h3>
-    <ul>
-      <li>🆕 Cập nhật truyện mới liên tục</li>
-      <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp…</li>
-      <li>🔄 Đồng bộ chương đang đọc trên nhiều thiết bị</li>
-      <li>🌐 Tìm kiếm truyện từ nhiều nguồn</li>
-      <li>⬇️ Tải truyện về đọc offline</li>
-    </ul>
+  <div class="feature-card">
+    <div class="feature-content">
+      <h3>📖 Đọc truyện online</h3>
+      <ul>
+        <li>🆕 Cập nhật truyện mới liên tục</li>
+        <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp…</li>
+        <li>🔄 Đồng bộ chương đang đọc trên nhiều thiết bị</li>
+        <li>🌐 Tìm kiếm truyện từ nhiều nguồn</li>
+        <li>⬇️ Tải truyện về đọc offline</li>
+      </ul>
+    </div>
+    <div class="feature-image">
+      <img src="/images/novel-vertical.png" alt="Đọc truyện online">
+    </div>
   </div>
 
-  <div class="card">
-    <img src="/images/library.png" alt="Kho truyện chia sẻ" class="card-img">
-    <h3>📚 Kho truyện chia sẻ</h3>
-    <ul>
-      <li>🤝 Tải truyện & sách do cộng đồng chia sẻ</li>
-      <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ</li>
-      <li>📈 Nội dung được cập nhật thường xuyên</li>
-    </ul>
+  <div class="feature-card">
+    <div class="feature-content">
+      <h3>📚 Kho truyện chia sẻ</h3>
+      <ul>
+        <li>🤝 Truyện & sách do cộng đồng chia sẻ</li>
+        <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ</li>
+        <li>📈 Nội dung được cập nhật thường xuyên</li>
+      </ul>
+    </div>
+    <div class="feature-image">
+      <img src="/images/library-vertical.png" alt="Kho truyện">
+    </div>
   </div>
 
-  <div class="card">
-    <img src="/images/drive.png" alt="Google Drive" class="card-img">
-    <h3>☁️ Truy cập Google Drive</h3>
-    <ul>
-      <li>🔐 Đăng nhập Google Drive cá nhân</li>
-      <li>📁 Xem “Drive của tôi” & “Được chia sẻ với tôi”</li>
-      <li>📥 Tải sách – truyện về máy đọc offline</li>
-    </ul>
+  <div class="feature-card">
+    <div class="feature-content">
+      <h3>☁️ Truy cập Google Drive</h3>
+      <ul>
+        <li>🔐 Đăng nhập Google Drive cá nhân</li>
+        <li>📁 Drive của tôi & Được chia sẻ với tôi</li>
+        <li>📥 Tải sách – truyện về máy đọc offline</li>
+      </ul>
+    </div>
+    <div class="feature-image">
+      <img src="/images/drive-vertical.png" alt="Google Drive">
+    </div>
   </div>
 
 </div>
+
 
 
 
