--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section class="features">
 
   
-<div class="feature-list">
+<div class="feature-grid">
 
   <div class="feature-card">
     <div class="feature-content">
@@ -57,9 +57,9 @@
       <ul>
         <li>🆕 Cập nhật truyện mới liên tục</li>
         <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp…</li>
-        <li>🔄 Đồng bộ chương đang đọc trên nhiều thiết bị</li>
-        <li>🌐 Tìm kiếm truyện từ nhiều nguồn</li>
-        <li>⬇️ Tải truyện về đọc offline</li>
+        <li>🔄 Đồng bộ chương đang đọc</li>
+        <li>🌐 Tìm kiếm truyện nhiều nguồn</li>
+        <li>⬇️ Tải truyện đọc offline</li>
       </ul>
     </div>
     <div class="feature-image">
@@ -72,12 +72,12 @@
       <h3>📚 Kho truyện chia sẻ</h3>
       <ul>
         <li>🤝 Truyện & sách do cộng đồng chia sẻ</li>
-        <li>🗂️ Phân loại rõ ràng: truyện tranh, truyện chữ</li>
+        <li>🗂️ Phân loại rõ ràng truyện tranh – truyện chữ</li>
         <li>📈 Nội dung được cập nhật thường xuyên</li>
       </ul>
     </div>
     <div class="feature-image">
-      <img src="/images/library-vertical.png" alt="Kho truyện">
+      <img src="/images/library-vertical.png" alt="Kho truyện chia sẻ">
     </div>
   </div>
 
@@ -87,7 +87,7 @@
       <ul>
         <li>🔐 Đăng nhập Google Drive cá nhân</li>
         <li>📁 Drive của tôi & Được chia sẻ với tôi</li>
-        <li>📥 Tải sách – truyện về máy đọc offline</li>
+        <li>📥 Tải sách – truyện về đọc offline</li>
       </ul>
     </div>
     <div class="feature-image">
