--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="feature-content">
         <h3>📰 Đọc báo RSS</h3>
         <ul>
-          <li>🖼️ Bài viết hiển thị dạng thumbnail</li>
-          <li>🏠 Trang chủ tổng hợp nhiều đầu báo</li>
-          <li>⭐ Lưu & quản lý danh mục yêu thích</li>
-          <li>⚡ Luôn có tin mới nhất</li>
-          <li>🔍 Tìm kiếm nội dung bài viết</li>
+          <li>Bài viết hiển thị dạng thumbnail</li>
+          <li>Trang chủ tổng hợp nhiều đầu báo</li>
+          <li>Lưu & quản lý danh mục yêu thích</li>
+          <li>Luôn có tin mới nhất</li>
+          <li>Tìm kiếm nội dung bài viết</li>
         </ul>
       </div>
       <div class="feature-image">
@@ -56,11 +56,11 @@
       <div class="feature-content">
         <h3>📖 Đọc truyện online</h3>
         <ul>
-          <li>🆕 Cập nhật truyện mới liên tục</li>
-          <li>📂 Nhiều thể loại: tu tiên, kiếm hiệp…</li>
-          <li>🔄 Đồng bộ chương đang đọc</li>
-          <li>🌐 Tìm truyện từ nhiều nguồn</li>
-          <li>⬇️ Tải về đọc offline</li>
+          <li>Cập nhật truyện mới liên tục</li>
+          <li>Nhiều thể loại: tu tiên, kiếm hiệp…</li>
+          <li>Đồng bộ chương đang đọc</li>
+          <li>Tìm truyện từ nhiều nguồn</li>
+          <li>Tải về đọc offline</li>
         </ul>
       </div>
       <div class="feature-image">
@@ -73,9 +73,9 @@
       <div class="feature-content">
         <h3>📚 Kho truyện chia sẻ</h3>
         <ul>
-          <li>🤝 Truyện & sách do cộng đồng đóng góp</li>
-          <li>🗂️ Phân loại rõ: truyện chữ – truyện tranh</li>
-          <li>📈 Nội dung được cập nhật thường xuyên</li>
+          <li>Truyện & sách do cộng đồng đóng góp</li>
+          <li>Phân loại rõ: truyện chữ – truyện tranh</li>
+          <li>Nội dung được cập nhật thường xuyên</li>
         </ul>
       </div>
       <div class="feature-image">
@@ -88,9 +88,9 @@
       <div class="feature-content">
         <h3>☁️ Truy cập Google Drive</h3>
         <ul>
-          <li>🔐 Đăng nhập Google Drive cá nhân</li>
-          <li>📁 Drive của tôi & Được chia sẻ</li>
-          <li>📥 Tải sách – truyện về đọc offline</li>
+          <li>Đăng nhập Google Drive cá nhân</li>
+          <li>Drive của tôi & Được chia sẻ</li>
+          <li>Tải sách – truyện về đọc offline</li>
         </ul>
       </div>
       <div class="feature-image">
