--- a/index.html
+++ b/index.html
@@ -31,77 +31,67 @@
 </p>
 
 
-<section class="features">
-  <div class="feature-grid">
+<div class="card-grid">
 
-    <!-- 📰 RSS -->
-    <div class="feature-card">
-      <div class="feature-content">
-        <h3>📰 Đọc báo RSS2</h3>
-        <ul>
-          <li>Bài viết hiển thị dạng thumbnail</li>
-          <li>Trang chủ tổng hợp nhiều đầu báo</li>
-          <li>Lưu & quản lý danh mục yêu thích</li>
-          <li>Luôn có tin mới nhất</li>
-          <li>Tìm kiếm nội dung bài viết</li>
-        </ul>
-      </div>
-      <div class="feature-image">
-        <img src="/images/rss-vertical.png" alt="Đọc báo RSS">
-      </div>
+    <div class="card feature-card">
+        <div class="feature-content">
+            <h3>📰 Đọc báo RSS</h3>
+            <ul class="feature-list">
+                <li>Hiển thị bài viết dạng thumbnail</li>
+                <li>Tổng hợp nhiều đầu báo</li>
+                <li>Tìm kiếm nội dung nhanh</li>
+                <li>Đọc tối ưu cho màn hình e-ink</li>
+            </ul>
+        </div>
+        <div class="feature-image">
+            <img src="/images/rss.jpg" alt="Đọc báo RSS">
+        </div>
     </div>
 
-    <!-- 📖 TRUYỆN ONLINE -->
-    <div class="feature-card">
-      <div class="feature-content">
-        <h3>📖 Đọc truyện online</h3>
-        <ul>
-          <li>Cập nhật truyện mới liên tục</li>
-          <li>Nhiều thể loại: tu tiên, kiếm hiệp…</li>
-          <li>Đồng bộ chương đang đọc</li>
-          <li>Tìm truyện từ nhiều nguồn</li>
-          <li>Tải về đọc offline</li>
-        </ul>
-      </div>
-      <div class="feature-image">
-        <img src="/images/novel-vertical.png" alt="Đọc truyện online">
-      </div>
+    <div class="card feature-card">
+        <div class="feature-content">
+            <h3>📖 Đọc truyện online</h3>
+            <ul class="feature-list">
+                <li>Nhiều nguồn truyện khác nhau</li>
+                <li>Lưu chương đang đọc</li>
+                <li>Cập nhật truyện mới</li>
+                <li>Hỗ trợ đọc offline</li>
+            </ul>
+        </div>
+        <div class="feature-image">
+            <img src="/images/story.jpg" alt="Đọc truyện">
+        </div>
     </div>
 
-    <!-- 📚 KHO CHIA SẺ -->
-    <div class="feature-card">
-      <div class="feature-content">
-        <h3>📚 Kho truyện chia sẻ</h3>
-        <ul>
-          <li>Truyện & sách do cộng đồng đóng góp</li>
-          <li>Phân loại rõ: truyện chữ – truyện tranh</li>
-          <li>Nội dung được cập nhật thường xuyên</li>
-        </ul>
-      </div>
-      <div class="feature-image">
-        <img src="/images/library-vertical.png" alt="Kho truyện chia sẻ">
-      </div>
+    <div class="card feature-card">
+        <div class="feature-content">
+            <h3>📚 Kho truyện chia sẻ</h3>
+            <ul class="feature-list">
+                <li>Kho truyện cộng đồng</li>
+                <li>Phân loại rõ ràng</li>
+                <li>Dễ dàng tải về</li>
+            </ul>
+        </div>
+        <div class="feature-image">
+            <img src="/images/library.jpg" alt="Kho truyện">
+        </div>
     </div>
 
-    <!-- ☁️ DRIVE -->
-    <div class="feature-card">
-      <div class="feature-content">
-        <h3>☁️ Truy cập Google Drive</h3>
-        <ul>
-          <li>Đăng nhập Google Drive cá nhân</li>
-          <li>Drive của tôi & Được chia sẻ</li>
-          <li>Tải sách – truyện về đọc offline</li>
-        </ul>
-      </div>
-      <div class="feature-image">
-        <img src="/images/drive-vertical.png" alt="Google Drive">
-      </div>
+    <div class="card feature-card">
+        <div class="feature-content">
+            <h3>☁️ Google Drive</h3>
+            <ul class="feature-list">
+                <li>Kết nối Drive cá nhân</li>
+                <li>Xem file được chia sẻ</li>
+                <li>Tải sách đọc offline</li>
+            </ul>
+        </div>
+        <div class="feature-image">
+            <img src="/images/drive.jpg" alt="Google Drive">
+        </div>
     </div>
 
-  </div>
-</section>
-
-
+</div>
 
 
 
