--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="card feature-card">
         <div class="feature-content">
-            <h3>📰 Đọc báo RSS</h3>
+            <h3>📰 Đọc báo RSS4</h3>
             <ul class="feature-list">
                 <li>Hiển thị bài viết dạng thumbnail</li>
                 <li>Tổng hợp nhiều đầu báo</li>
