--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="/images/rss.jpg" alt="Đọc báo RSS">
+            <img src="https://raw.githubusercontent.com/luan-tv/doc-online/main/assets/images/rss.png">
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="/images/story.jpg" alt="Đọc truyện">
+            <img src="https://raw.githubusercontent.com/luan-tv/doc-online/main/assets/images/story.png">
         </div>
     </div>
 
