--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="https://raw.githubusercontent.com/luan-tv/doc-online/main/assets/images/rss.png">
+            <img src="https://haiminh2023.github.io/assets/images/rss.jpg">
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="https://raw.githubusercontent.com/luan-tv/doc-online/main/assets/images/story.png">
+            <img src="https://haiminh2023.github.io/assets/images/story.jpg">
         </div>
     </div>
 
