--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <div class="card-grid">
 
-    <div class="card feature-card">
+    <div class="feature-card">
         <div class="feature-content">
-            <h3>📰 Đọc báo RSS6</h3>
+            <h3>📰 Đọc báo RSS - 1</h3>
             <ul class="feature-list">
                 <li>Hiển thị bài viết dạng thumbnail</li>
                 <li>Tổng hợp nhiều đầu báo</li>
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <div class="card feature-card">
+    <div class="feature-card">
         <div class="feature-content">
             <h3>📖 Đọc truyện online</h3>
             <ul class="feature-list">
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <div class="card feature-card">
+    <div class="feature-card">
         <div class="feature-content">
             <h3>📚 Kho truyện chia sẻ</h3>
             <ul class="feature-list">
@@ -73,11 +73,11 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="/images/library.jpg" alt="Kho truyện">
+            <img src="https://haiminh2023.github.io/assets/images/library.jpg">
         </div>
     </div>
 
-    <div class="card feature-card">
+    <div class="feature-card">
         <div class="feature-content">
             <h3>☁️ Google Drive</h3>
             <ul class="feature-list">
@@ -87,11 +87,12 @@
             </ul>
         </div>
         <div class="feature-image">
-            <img src="/images/drive.jpg" alt="Google Drive">
+            <img src="https://haiminh2023.github.io/assets/images/drive.jpg">
         </div>
     </div>
 
 </div>
+
 
 
 
